# vDirect

./: LICENSE.txt  README.md  development_notes.txt  requirements.txt  setup.cfg  setup.py  test.sh
tests/: test.py
vDirect/: API_requests.py  __init__.py  __main__.py  main.py
