[metadata]
name = vdirect
version = 1.0
url = https://github.com/sigi-k/vDirect
project_urls =
    Documentation = https://github.com/sigi-k/vDirect
    Code = https://github.com/sigi-k/vDirect
license = BSD-3-Clause
license_files = LICENSE.rst
author = Sigrid Koizar, Nikola Vinko
author_email = a11741823@unet.univie.ac.at
maintainer = Sigrid Koizar
maintainer_email = a11741823@unet.univie.ac.at
description = Command line interface to send requests to the VOGDB-API
long_description = file: README.md
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: Linux
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = true
source =
    src
    tests

[coverage:paths]
source =
    click
    */site-packages

