[metadata]
name = vdirect
version = 1.1
url = https://github.com/sigi-k/vDirect
project_urls =
    Code = https://github.com/sigi-k/vDirect
license = MIT
license_files = LICENSE.rst
author = Sigrid Koizar, Nikola Vinko
author_email = a11741823@unet.univie.ac.at
maintainer = Sigrid Koizar
maintainer_email = a11741823@unet.univie.ac.at
description = Command line interface to send requests to the VOGDB-API
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Programming Language :: Python

[options]
packages = find:
; py_modules = vdirect
include_package_data = true
python_requires = >= 3.7
install_requires =
    requests
    argparse

[options.entry_points]
console_scripts =
    vdirect = vDirect.main:main
